z-index try fix bug

--- a/source/assets/stylesheets/teknokent.css.sass
+++ b/source/assets/stylesheets/teknokent.css.sass
@@ -103,9 +103,10 @@ a.join-now-second-btn
     border-radius: 1200px 1200px 0 0
     display: block
     background: #505761
-    position: absolute
+    position: relative
     bottom: 0
     left: 50%
+    z-index: 0
     margin-left: -600px
 
     &.big
@@ -123,7 +124,7 @@ a.join-now-second-btn
   .flask
     width: 125px
     height: 275px
-    display: block
+    display: blo
     position: absolute
     bottom: 120px
     left: 50%
